<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:theme="@style/ThemeOverlay.HypoIntervention.FullscreenContainer"
    tools:context=".FullscreenActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/android_auto_screen"
            android:contentDescription="@string/my_image_description"
            />
    </LinearLayout>

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="@style/Widget.Theme.HypoIntervention.ButtonBar.Fullscreen"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/buttonHeight"
            android:layout_gravity="right|bottom"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/standard_btn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_marginEnd="5dp"
                android:layout_width="@dimen/buttonWidth"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/ButtonStandard" />

            <Button
                android:id="@+id/voice_btn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_marginEnd="5dp"
                android:layout_width="@dimen/buttonWidth"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/ButtonVoice" />

            <Button
                android:id="@+id/voice_led_btn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_marginEnd="55dp"
                android:layout_width="@dimen/buttonWidth"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/ButtonVoiceLed" />

        </LinearLayout>

</FrameLayout>